k8s-manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment
  namespace: javaguru
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-deployment
  template:
    metadata:
      labels:
        app: my-deployment
    spec:
      containers:
        - name: test-pipeline
          image: 93.125.42.36:8123/repository/docker-release/test-service:1.0.0
      imagePullSecrets:
        - name: nexus-secret
