k8s-manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-deployment
  namespace: javaguru
spec:
  ports:
    - port: 9090
      targetPort: 9090
  selector:
    app: my-deployment
